--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,9 @@
 .comment-form {
   max-width: 630px;
   padding: 50px;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
 }
 
 .form-field {
