--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@
   max-width: 550px;
   margin: 0 auto;
   padding: 50px;
+  min-width: 220px;
 }
 
 .comment-form {
@@ -21,6 +22,7 @@
   flex-direction: column;
   flex-grow: 1;
   width: 20%;
+  min-width: 150px;
 }
 
 .form-field_comment {
